syntax="proto3";

import "google/protobuf/timestamp.proto";
import "data_schema.proto";

package wartech;
option go_package="wartech-studio.com/monster-reacher/libraries/protobuf/wartech;wartech";

service Wartech {
    rpc Register(RegisterRequest) returns(RegisterResponse);
    rpc Authentication(AuthenticationRequest) returns(AuthenticationResponse);
    rpc CheckUserOrEmail(CheckUserOrEmailRequest) returns(CheckUserOrEmailResponse);
    rpc ForgottenPassword(ForgottenPasswordRequest) returns(ForgottenPasswordResponse);
    rpc ChangePassword(ChangePasswordRequest) returns(ChangePasswordResponse);
    rpc GetUser(GetUserRequest) returns(GetUserResponse);
    rpc ConfirmEmail(ConfirmEmailRequest) returns(ConfirmEmailResponse);
}

message RegisterRequest {
    string user = 1;
    string email = 2;
    string password = 3;
    google.protobuf.Timestamp birthday_timestamp = 4;
}
message RegisterResponse {
    string id = 1;
    bool is_success = 2;
}

message AuthenticationRequest {
    string user_or_email = 1;
    string password = 2;
}
message AuthenticationResponse {
    bool is_success = 1;
    bool is_confirmed = 2;
    string id = 3;
}

message CheckUserOrEmailRequest {
    string user_or_email = 1;
}
message CheckUserOrEmailResponse {
    bool is_valid = 1;
}

message ForgottenPasswordRequest {
    string user_or_email = 1;
}
message ForgottenPasswordResponse {
    bool is_success = 2;
}

message ChangePasswordRequest {
    string user_or_email = 1;
    string old_password = 2;
    string new_password = 3;
}
message ChangePasswordResponse {
    bool is_success = 2;
}

message GetUserRequest {
    string id = 1;
}
message GetUserResponse {
    data_schema.WartechUserData data = 1;
}

message ConfirmEmailRequest {
    string user_or_email = 1;
    string code = 2;
}
message ConfirmEmailResponse {
    bool is_success = 2;
}